Получение продукта по Id
